--- a/index.html
+++ b/index.html
@@ -222,22 +222,22 @@
 </section>
 <section class="mt-16 scroll-mt-20" id="contact">
 <div class="mx-auto max-w-4xl px-4 py-16 sm:px-6 lg:px-8">
-<form class="space-y-6">
+<form action="https://formsubmit.co/reuben534@gmail.com" method="POST" class="space-y-6">
 <div>
 <label class="mb-2 block text-sm font-medium text-black/80 dark:text-white/80" for="name">Name</label>
-<input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="name" placeholder="Your Name"/>
+<input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="name" name="name" placeholder="Your Name" required/>
 </div>
 <div>
 <label class="mb-2 block text-sm font-medium text-black/80 dark:text-white/80" for="email">Email</label>
-<input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="email" placeholder="Your Email" type="email"/>
+<input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="email" name="email" placeholder="Your Email" type="email" required/>
 </div>
 <div>
 <label class="mb-2 block text-sm font-medium text-black/80 dark:text-white/80" for="subject">Subject</label>
-<input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="subject" placeholder="Subject"/>
+<input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="subject" name="subject" placeholder="Subject"/>
 </div>
 <div>
 <label class="mb-2 block text-sm font-medium text-black/80 dark:text-white/80" for="message">Message</label>
-<textarea class="form-textarea block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="message" placeholder="Your Message" rows="5"></textarea>
+<textarea class="form-textarea block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
 </div>
 <div class="flex justify-end">
 <button class="rounded-lg bg-primary px-6 py-3 text-sm font-bold text-white shadow-lg transition hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-primary/50 focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark" type="submit">
@@ -251,7 +251,7 @@
 <footer class="bg-background-light dark:bg-background-dark border-t border-gray-200 dark:border-gray-800">
 <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-6">
 <p class="text-center text-sm text-gray-500 dark:text-gray-400">
-            © 2024 Reuben Kgobe. All Rights Reserved.
+            © 2019 Reuben Kgobe. All Rights Reserved.
           </p>
 </div>
 </footer>
