--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 </section>
 <section class="mt-16 scroll-mt-20" id="contact">
 <div class="mx-auto max-w-4xl px-4 py-16 sm:px-6 lg:px-8">
-<form action="https://formsubmit.co/reuben534@gmail.com" method="POST" class="space-y-6">
+<form id="contact-form" action="https://formsubmit.co/reuben534@gmail.com" method="POST" class="space-y-6">
 <div>
 <label class="mb-2 block text-sm font-medium text-black/80 dark:text-white/80" for="name">Name</label>
 <input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="name" name="name" placeholder="Your Name" required/>
@@ -245,6 +245,9 @@
                 </button>
 </div>
 </form>
+<div id="success-message" class="hidden mt-4 text-center text-green-500">
+  <p>Your message has been sent successfully. Thank you!</p>
+</div>
 </div>
 </section>
 </div>
@@ -306,6 +309,43 @@ themeToggleBtn.addEventListener('click', function() {
         }
     }
     
+});
+
+const contactForm = document.getElementById('contact-form');
+const successMessage = document.getElementById('success-message');
+
+contactForm.addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    const formData = new FormData(contactForm);
+
+    fetch(contactForm.action, {
+        method: 'POST',
+        body: formData,
+        headers: {
+            'Accept': 'application/json'
+        }
+    })
+    .then(response => {
+        if (response.ok) {
+            contactForm.reset();
+            successMessage.classList.remove('hidden');
+            setTimeout(() => {
+                successMessage.classList.add('hidden');
+            }, 5000);
+        } else {
+            response.json().then(data => {
+                if (Object.hasOwn(data, 'errors')) {
+                    alert(data["errors"].map(error => error["message"]).join(", "));
+                } else {
+                    alert('Oops! There was a problem submitting your form');
+                }
+            })
+        }
+    })
+    .catch(error => {
+        alert('Oops! There was a problem submitting your form');
+    });
 });
 </script>
 </body></html>
