--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </h2>
 <div class="space-y-6 text-base md:text-lg text-gray-600 dark:text-gray-400 leading-relaxed">
 <p>
-                  I'm Reuben Kgobe, a systems and applications developer with a profound passion for creating innovative and efficient solutions. My journey into the world of technology is built upon a solid educational foundation and an insatiable curiosity for what's possible.
+                  Reuben Kgobe, a systems and applications developer with a profound passion for creating innovative and efficient solutions. My journey into the world of technology is built upon a solid educational foundation and an insatiable curiosity for what's possible.
                 </p>
 <div class="flex justify-center mb-8">
 <div class="w-48 h-48 rounded-full bg-cover bg-center ring-4 ring-primary/50" style='background-image: url("images/Profile_Pic.jpeg");'></div>
@@ -222,7 +222,9 @@
 </section>
 <section class="mt-16 scroll-mt-20" id="contact">
 <div class="mx-auto max-w-4xl px-4 py-16 sm:px-6 lg:px-8">
-<form id="contact-form" action="https://formsubmit.co/reuben534@gmail.com" method="POST" class="space-y-6">
+<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Contact Me</h2>
+<p class="mt-4 text-lg text-gray-600 dark:text-gray-400">Let's build something amazing together! Whether you have a question, a project idea, or just want to say hello, my inbox is always open. Fill out the form below or give me a call at <span class="text-primary">061 4893 124</span>.</p>
+<form id="contact-form" action="https://formsubmit.co/reuben534@gmail.com" method="POST" class="mt-12 space-y-6">
 <div>
 <label class="mb-2 block text-sm font-medium text-black/80 dark:text-white/80" for="name">Name</label>
 <input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="name" name="name" placeholder="Your Name" required/>
