--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         Advanced Diploma in Applications Development
                         <span class="bg-primary/10 text-primary text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-primary/20 ml-3">Ongoing</span>
 </h4>
-<time class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-500">Started June 2024</time>
+<time class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-500">Busy With</time>
 <p class="text-sm font-normal text-gray-500 dark:text-gray-400">Rosebank College</p>
 </li>
 <li class="ml-6">
@@ -111,7 +111,7 @@
 </svg>
 </span>
 <h4 class="mb-1 text-base font-semibold text-gray-900 dark:text-white">Diploma in Systems Development</h4>
-<time class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-500">June 2019 - December 2023</time>
+<time class="block mb-2 text-sm font-normal leading-none text-gray-500 dark:text-gray-500">Completed</time>
 <p class="text-sm font-normal text-gray-500 dark:text-gray-400">Boston City Campus</p>
 </li>
 </ol>
