--- a/index.html
+++ b/index.html
@@ -209,24 +209,27 @@
 <h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Projects</h2>
 <div class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
 <div class="group flex flex-col overflow-hidden rounded-lg border border-gray-200/50 bg-background-light shadow-sm transition-shadow hover:shadow-lg dark:border-gray-700/50 dark:bg-background-dark/50">
-<div class="aspect-video w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCJ86PbcJw0B0N0hT64sQXvQVw0QU20gKO8dTc732c-gB35-91pbw27v-vFA2QM8sg7mu5-LfX-msViBMrT1b044v4Fg_I4MwZ2_u4D451VE3DhA3WGJ2xIAgFSTdnqcVhDyfSox0RIKhjZC7KEyeh1y9mOg4UQVQKFq3hgNbAwspM-bH92smWTs-KftMIjm23hr_3kfWxbL-n5ztZOgRVKG9KQdsiYwLwjVCkR586HUGl90jDx4nYQC6Ae1X6AIvFsVlh4lvTd3hYC");'></div>
+<div class="aspect-video w-full bg-cover bg-center" style='background-image: url("images/International_Payment_Portal.PNG");'></div>
 <div class="p-4">
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">Project Alpha</h3>
-<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">A web application built with React and Node.js.</p>
+<h3 class="text-lg font-semibold text-gray-900 dark:text-white">International Payment Portal</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">application created using merns stack</p>
+<div class="mt-4">
+<a class="inline-block rounded-lg bg-primary px-4 py-2 text-sm font-semibold text-white shadow-lg transition hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-dark" href="https://youtu.be/2wTqomChTEM" target="_blank">View Demo</a>
+</div>
 </div>
 </div>
 <div class="group flex flex-col overflow-hidden rounded-lg border border-gray-200/50 bg-background-light shadow-sm transition-shadow hover:shadow-lg dark:border-gray-700/50 dark:bg-background-dark/50">
 <div class="aspect-video w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBRmQAZn7k7Wj2Q8CBPb21XWCsZpYSMRXjf4WOc9CgoIPnGYgzhrM-U3h3ItHOReZxalGk3-9KRgBdmhltIIrXeSsb6IEJuYJ6zLuQz1VNCqKRCCqmFlAHbZ3CcvFB_6o1owYvvYm8V4tV6gxCiKVNu_6ziJETpzIdRxHJ7tmWW0EwR_oLUf2_MtfdVmYhViSX7fxkQZxWFiXoCjafKK3EroDZVdT8wg_xTB1S6th7Q18sSfgtltCskrWkkM6U02TAiQXFdknm3sjMr");'></div>
 <div class="p-4">
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">Project Beta</h3>
-<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">An ASP.NET Core MVC application for managing tasks.</p>
+<h3 class="text-lg font-semibold text-gray-900 dark:text-white">eCommerce App</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">Coming soon using ASP.NET Core MVC</p>
 </div>
 </div>
 <div class="group flex flex-col overflow-hidden rounded-lg border border-gray-200/50 bg-background-light shadow-sm transition-shadow hover:shadow-lg dark:border-gray-700/50 dark:bg-background-dark/50">
 <div class="aspect-video w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCIMVLA6IiqtdsdQx7mLWw3aN2g8sXL3_AdNXqCoNd379dnagwVjoy33qUNcgAV0oQrI1anPV2eOJ2s_fJMCKzuHp9IdcX5-Aab6sHe3R3qI5Zvh9J6ZIhyip-PNCTPN0B-hkyKHY66CGd4BPwBOjjzyRDPIwqg02QI3P931uQ--75L-Sd--3GUvJAJTSUToBKqMjONcpZLDXeCK1BlAELnjdPUN_2UlqHiihiVwp3WHWEyEYlPDN87OjCazgqK5NTSySBRBbLye9Wc");'></div>
 <div class="p-4">
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">Project Gamma</h3>
-<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">A full-stack project using the MERN stack.</p>
+<h3 class="text-lg font-semibold text-gray-900 dark:text-white">Inventory Management</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">Using WebForms</p>
 </div>
 </div>
 </div>
@@ -267,7 +270,7 @@
 <footer class="bg-background-light dark:bg-background-dark border-t border-gray-200 dark:border-gray-800">
 <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-6">
 <p class="text-center text-sm text-gray-500 dark:text-gray-400">
-            © 2019 Reuben Kgobe. All Rights Reserved.
+            © 2025 Reuben Kgobe. All Rights Reserved.
           </p>
 </div>
 </footer>
