--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
 <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 lg:px-8">
 <h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Contact Me</h2>
 <p class="mt-4 text-lg text-gray-600 dark:text-gray-400">Let's build something amazing together! Whether you have a question, a project idea, or just want to say hello, my inbox is always open. Fill out the form below or give me a call at <span class="text-primary">061 4893 124</span>.</p>
-<form id="contact-form" action="https://formsubmit.co/reuben534@gmail.com" method="POST" class="mt-12 space-y-6">
+<form id="contact-form" action="https://api.web3forms.com/submit" method="POST" class="mt-12 space-y-6">
+<input type="hidden" name="access_key" value="66c48468-fd9d-43fa-be31-6c8c0de4c60a">
 <div>
 <label class="mb-2 block text-sm font-medium text-black/80 dark:text-white/80" for="name">Name</label>
 <input class="form-input block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="name" name="name" placeholder="Your Name" required/>
