--- a/index.html
+++ b/index.html
@@ -219,17 +219,20 @@
 </div>
 </div>
 <div class="group flex flex-col overflow-hidden rounded-lg border border-gray-200/50 bg-background-light shadow-sm transition-shadow hover:shadow-lg dark:border-gray-700/50 dark:bg-background-dark/50">
-<div class="aspect-video w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBRmQAZn7k7Wj2Q8CBPb21XWCsZpYSMRXjf4WOc9CgoIPnGYgzhrM-U3h3ItHOReZxalGk3-9KRgBdmhltIIrXeSsb6IEJuYJ6zLuQz1VNCqKRCCqmFlAHbZ3CcvFB_6o1owYvvYm8V4tV6gxCiKVNu_6ziJETpzIdRxHJ7tmWW0EwR_oLUf2_MtfdVmYhViSX7fxkQZxWFiXoCjafKK3EroDZVdT8wg_xTB1S6th7Q18sSfgtltCskrWkkM6U02TAiQXFdknm3sjMr");'></div>
+<div class="aspect-video w-full bg-cover bg-center" style='background-image: url("images/EvenEase.PNG");'></div>
 <div class="p-4">
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">eCommerce App</h3>
-<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">Coming soon using ASP.NET Core MVC</p>
+<h3 class="text-lg font-semibold text-gray-900 dark:text-white">EventEase App</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">application created using asp.net core mvc</p>
+<div class="mt-4">
+<a class="inline-block rounded-lg bg-primary px-4 py-2 text-sm font-semibold text-white shadow-lg transition hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-dark" href="https://youtu.be/Ebp0L9I9lhk" target="_blank">View Demo</a>
+</div>
 </div>
 </div>
 <div class="group flex flex-col overflow-hidden rounded-lg border border-gray-200/50 bg-background-light shadow-sm transition-shadow hover:shadow-lg dark:border-gray-700/50 dark:bg-background-dark/50">
 <div class="aspect-video w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCIMVLA6IiqtdsdQx7mLWw3aN2g8sXL3_AdNXqCoNd379dnagwVjoy33qUNcgAV0oQrI1anPV2eOJ2s_fJMCKzuHp9IdcX5-Aab6sHe3R3qI5Zvh9J6ZIhyip-PNCTPN0B-hkyKHY66CGd4BPwBOjjzyRDPIwqg02QI3P931uQ--75L-Sd--3GUvJAJTSUToBKqMjONcpZLDXeCK1BlAELnjdPUN_2UlqHiihiVwp3WHWEyEYlPDN87OjCazgqK5NTSySBRBbLye9Wc");'></div>
 <div class="p-4">
 <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Inventory Management</h3>
-<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">Using WebForms</p>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">Coming soon</p>
 </div>
 </div>
 </div>
