--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet"/>
+<link href="styles.css" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <script>
       tailwind.config = {
@@ -95,7 +97,7 @@
                   Reuben Kgobe, a systems and applications developer with a profound passion for creating innovative and efficient solutions. My journey into the world of technology is built upon a solid educational foundation and an insatiable curiosity for what's possible.
                 </p>
 <div class="flex justify-center mb-8">
-<div class="w-32 h-32 sm:w-48 sm:h-48 rounded-full bg-cover bg-center ring-4 ring-primary/50" style='background-image: url("images/Profile_Pic.jpeg");'></div>
+<div class="w-32 h-32 sm:w-48 sm:h-48 rounded-full bg-cover bg-center ring-4 ring-primary/50 profile-pic" style='background-image: url("images/Profile_Pic.jpeg");'></div>
 </div>
 <div class="p-6 rounded-lg bg-gray-100/50 dark:bg-gray-800/20 border border-gray-200 dark:border-gray-800/50">
 <h3 class="font-semibold text-lg text-gray-800 dark:text-gray-200 mb-4">My Educational Journey</h3>
@@ -281,101 +283,12 @@
 </div>
 
 <script>
-// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+// Inline theme initialization to avoid FOUC (Flash of Unstyled Content)
 if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
     document.documentElement.classList.add('dark');
 } else {
-    document.documentElement.classList.remove('dark')
+    document.documentElement.classList.remove('dark');
 }
-
-var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
-var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
-
-// Change the icons inside the button based on previous settings
-if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-    themeToggleLightIcon.classList.remove('hidden');
-} else {
-    themeToggleDarkIcon.classList.remove('hidden');
-}
-
-var themeToggleBtn = document.getElementById('theme-toggle');
-
-themeToggleBtn.addEventListener('click', function() {
-
-    // toggle icons inside button
-    themeToggleDarkIcon.classList.toggle('hidden');
-    themeToggleLightIcon.classList.toggle('hidden');
-
-    // if set via local storage previously
-    if (localStorage.getItem('color-theme')) {
-        if (localStorage.getItem('color-theme') === 'light') {
-            document.documentElement.classList.add('dark');
-            localStorage.setItem('color-theme', 'dark');
-        } else {
-            document.documentElement.classList.remove('dark');
-            localStorage.setItem('color-theme', 'light');
-        }
-
-    // if NOT set via local storage previously
-    } else {
-        if (document.documentElement.classList.contains('dark')) {
-            document.documentElement.classList.remove('dark');
-            localStorage.setItem('color-theme', 'light');
-        } else {
-            document.documentElement.classList.add('dark');
-            localStorage.setItem('color-theme', 'dark');
-        }
-    }
-    
-});
-
-const contactForm = document.getElementById('contact-form');
-const successMessage = document.getElementById('success-message');
-
-contactForm.addEventListener('submit', function(event) {
-    event.preventDefault();
-
-    const formData = new FormData(contactForm);
-
-    fetch(contactForm.action, {
-        method: 'POST',
-        body: formData,
-        headers: {
-            'Accept': 'application/json'
-        }
-    })
-    .then(response => {
-        if (response.ok) {
-            contactForm.reset();
-            alert('Your message has been sent successfully. Thank you!');
-        } else {
-            response.json().then(data => {
-                if (Object.hasOwn(data, 'errors')) {
-                    alert(data["errors"].map(error => error["message"]).join(", "));
-                } else {
-                    alert('Oops! There was a problem submitting your form');
-                }
-            })
-        }
-    })
-    .catch(error => {
-        alert('Oops! There was a problem submitting your form');
-    });
-});
-
-const mobileMenuButton = document.getElementById('mobile-menu-button');
-const mobileMenu = document.getElementById('mobile-menu');
-
-if (mobileMenu) {
-    mobileMenu.classList.add('hidden'); // Initially hide the menu
-}
-
-if (mobileMenuButton) {
-    mobileMenuButton.addEventListener('click', function() {
-        if (mobileMenu) {
-            mobileMenu.classList.toggle('hidden');
-        }
-    });
-};
 </script>
+<script src="script.js"></script>
 </body></html>
