--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet"/>
 <link href="styles.css" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <script>
@@ -262,8 +262,9 @@
 <textarea class="form-textarea block w-full rounded-lg border-white/10 bg-black/5 p-3 text-black transition focus:border-primary focus:ring-primary dark:bg-white/5 dark:text-white" id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
 </div>
 <div class="flex justify-end">
-<button class="rounded-lg bg-primary px-6 py-3 text-sm font-bold text-white shadow-lg transition hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-primary/50 focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark" type="submit">
+<button class="rounded-lg bg-primary px-6 py-3 text-sm font-bold text-white shadow-lg transition hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-primary/50 focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark flex items-center gap-2" type="submit">
                   Send Message
+                  <i class="fas fa-paper-plane"></i>
                 </button>
 </div>
 </form>
